# FitProyect

./: pyproject.toml
FitnessTracker/: app.py  models.py  requirements.txt  routes.py  sendgrid.py
FitnessTracker/fitnesstracker.egg-info/: PKG-INFO
FitnessTracker/instance/: fitness.db
FitnessTracker/repl_nix_workspace.egg-info/: requires.txt
FitnessTracker/templates/: daily_routine.html  exercises.html  register.html
repl_nix_workspace.egg-info/: PKG-INFO
static/css/: style.css
static/js/: main.js  timer.js
templates/: add_progress.html  base.html  index.html  login.html  profile.html  reports.html  weekly_plan.html
